fix menu text misalignment

--- a/component-lib/src/molecules/Menu/Menu.pcss
+++ b/component-lib/src/molecules/Menu/Menu.pcss
@@ -381,13 +381,14 @@
 
     &__mobile-button-text {
         display: block;
-        margin-top: 0.5rem;
+        margin-top: 0.4rem;
         text-transform: uppercase;
         font-family: 'Helvetica Neue Medium';
         font-size: 0.675rem;
 
         @media all and (min-width: rem(600)) {
-            font-size: 0.833rem;
+            font-size: 14px;
+            margin-top: 0.5rem;
         }
     }
 
